# noobPractice

./: ACE_SYSTEM_FLOW.md  README.md  main.py  pyproject.toml
.cursor/rules/: context.mdc
ace/: ace_pipeline.py  ace_worker.py  chat_storage.py  chatbot.py  curator_agent.py  error_handling_middleware.py  fastapi_chatbot.py  feedback_system.py  logging_config.py  playbook_manager.py  reflector_agent.py  test_system.py
ace/ace/: ace_processing_log.json
ace/ace/ace_updates/: update_20251024_012343.json  update_20251024_012421.json  update_20251024_012455.json  update_20251024_012519.json
ace/tmp/: fastapi_chatbot_old.py  fastapi_chatbot_simple.py
deep_agentt/: DEEPAGENTS_INTERNAL_ARCHITECTURE.md  MCP_TOOLS_SUMMARY.md  MIDDLEWARE_FALLBACK_TEST.md  MULTI_AGENT_README.md  OPENROUTER_SETUP.md  multi_agent_testing_system copy.py  multi_agent_testing_system.py
notebooks/: langchain_create_react.py  test.ipynb
