[project]
name = "noobpractice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "deepagents>=0.1.4",
    "dotenv>=0.9.9",
    "faiss-cpu>=1.12.0",
    "fastapi>=0.119.1",
    "langchain>=1.0.0",
    "langchain-core>=1.0.0",
    "langchain-openai>=1.0.0",
    "llm-openrouter>=0.5",
    "notebook>=7.4.7",
    "openai>=2.5.0",
    "openrouter>=1.0",
    "uvicorn>=0.38.0",
]
